@@ -1,6 +1,7 @@
 = 3.7.11 (not released yet)
 - Add partial list_messages_content to reduce code duplication, and better support replacing list view with other way to render records
 - Support selector for records body in create_record_row JS method, better support replacing list view with other way to render records
+- Improve detection of member action links when list view is replaced with other structure, based on 'record' html class, instead of tags
 
 = 3.7.10
 - Move code from on_create.js.erb to partials, so it's easier to change parts, e.g. how new record is rendered
